- Fix: Warn before saving file that was modified on disk, externally
- Fix: Do not try to open mimetypes other than text/html directly in the help browser.
- Fixed: Screen device in rkward was not seen as interactive by R

--- Version 0.4.9b - May-10-2009
- Workaround: Deactivate all filemanagement shortcuts in the File Browser. These would sometimes trigger when they should not.
- Fix crash while inserting rows in a data.frame with string variables
- Fix immediate crash issue with R 2.9.0 (requires recompilation against R 2.9)
- Fix device window capturing with R 2.8.0
- Extended boxplot plugin
- Support data.frames in barplot plugin
- New set of plugins: Item Response Theory (by Meik Michalke)

--- Version 0.4.9a - Apr-20-2008
- Support for compilation with R 2.7
- Fixed some lockups during startup

--- Version 0.4.9 - Jan-14-2008
- Improved user interface for CSV import plugin
- Support drawing grids in histogram and stripchart plots
- New plugin: Levene test
- New plugin: Jarque-Bera test (by Germán Márquez Mejía)
- Fixed: Crosstabs plugin produces better output
- Fixed: use.value.labels option was wrong in SPSS import plugin
- Fixed: SPSS tables would only be imported to the workspace, when the edit option was checked
- Fixed: correct installation of rkward.desktop file
- Use the KDE default fixed spacing font for command log and object viewer

--- Version 0.4.8a - Nov-11-2007
- More reliable C stack limit detection on some systems
- Fixed: Console accepted pasted input while a command is running
- Fixed: Analysis->Moments->Moment plugin did not use the order-parameter
- Fixed: Crash on simple assignments in globalenv() with R < 2.4.0
- Fixed: Meta information (labels) did not get shown correctly in the data editor
- Add command line option "--debugger" for debugging purposes
- Fixed: Pressing the add button in a varslot with no object selected could crash RKWard

--- Version 0.4.8 - Oct-03-2007